# wbia-tpl-pyflann

./: .gitignore  CMakeLists.txt  README.rst  _old_mingw_make_script.bat  build_flann_mingw.bat  build_flann_unix.sh  clean.sh  crall_autobuild_flann.sh  mingw_build0.bat  mingw_flann_build.bat  old_autobuild_flann_script.sh  pyproject.toml  run_developer_setup.sh  run_doctests.sh  run_multibuild.sh  run_tests.py  setup.py  unix_build.sh  unix_flann_build.sh
.github/workflows/: publish.yml  python-publish.yml  test.yml
CMake/: CMakeLists.txt  Config.cmake.in  flann_utils.cmake  pyflann.pc.in  pyflann_utils.cmake
cmake/: flann.pc.in
cpp/: CMakeLists.txt
cpp/flann/: config.h
dev/: unix_build.sh
dev/docker/: make_base_image.py
examples/: CMakeLists.txt  example_add_remove.py
ibeis_pyflann/: flann_ctypes.py
pyflann/: __init__.py  __main__.py  exceptions.py  flann_ctypes.py  index.py
pyflann_ibeis/: flann_ctypes.py  index.py
requirements/: build.txt  tests.txt
scripts/: ci_prepare_macos_for_build.sh
src/cpp/: CMakeLists.txt
src/cpp/flann/: config.h  config.h.in  flann.cpp  flann.h  flann.h.ibeis  flann.hpp  flann.hpp.ibeis
src/cpp/flann/algorithms/: kdtree_index.h  (+2 more)
src/python/: CMakeLists.txt  setup.py.tpl
src/python/pyflann/: __init__.py  flann_ctypes.py  index.py
test/: CMakeLists.txt  memusage_clustering.py  memusage_nn.py  simple_benchmark.py  test_add_remove.py  test_add_remove_example.py  test_add_remove_save.py  test_clustering.py  test_index_save.py  test_nn.py  test_nn_autotune.py  test_nn_index.py
unmerged/: test_add_remove_save.py
(+2 files in other folders)
